Fix timeline css to use grid area

--- a/src/main.css
+++ b/src/main.css
@@ -2,3 +2,7 @@ canvas.rv-xy-canvas-element {
     width: inherit !important;
     height: inherit !important;
 }
+
+.timelineContainer {
+    grid-area: timeline;
+}
