--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-/*canvas.rv-xy-canvas-element {*/
-/*    width: inherit !important;*/
-/*    height: inherit !important;*/
-/*}*/
+canvas.rv-xy-canvas-element {
+    width: inherit !important;
+    height: inherit !important;
+}
 
 .timelineContainer {
     grid-area: timeline;
