Start using timebar store, add video player stub, other minor misc

--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,7 @@ img.timeAnchor{
 span.regionTitle{
     font-weight: bold;
 }
+
+/*.vis-timeline {*/
+/*    visibility: visible !important;*/
+/*}*/
