Add heirarchical dropdowns to select what to plot in rosbags
Ugly but it works. Clean up soon. I'm a little unclear on
react-easy-state nested update policies and how they interact with
prop-driven updates; need to research this.

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@ span.regionTitle {
     font-weight: bold;
 }
 
+.hidden {
+    display: none;
+}
+
 /*.vis-timeline {*/
 /*    visibility: visible !important;*/
 /*}*/
