Simple implementation of youtube video reference

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,11 @@ span.paneTitle {
     display: none;
 }
 
+#ytVidChooser {
+    position: fixed;
+    right: 300px;
+}
+
 /*.vis-timeline {*/
 /*    visibility: visible !important;*/
 /*}*/
